@@ -1,5 +1,5 @@
 INCLUDES = $(all_includes)
 METASOURCES = AUTO
 noinst_LIBRARIES =  libdialogs.a
-noinst_HEADERS = startupdialog.h rkloadlibsdialog.h
-libdialogs_a_SOURCES = startupdialog.cpp rkloadlibsdialog.cpp
+noinst_HEADERS = startupdialog.h rkloadlibsdialog.h rkreadlinedialog.h
+libdialogs_a_SOURCES = startupdialog.cpp rkloadlibsdialog.cpp rkreadlinedialog.cpp
